# Collatz-Viz

./: .gitignore  Cargo.toml  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  README.md  odd_collatz_tree.py
src/: collatz.rs  graph.rs  gui.rs  main.rs
src/engine/: base.rs  collatz.rs  mod.rs
src/tui/: app.rs  mod.rs  ui.rs
tests/: odd_collatz_d6_b5.txt  test_odd_collatz_tree.py
