[package]
name = "collatz-viz"
version = "0.1.0"
edition = "2021"
authors = ["Collatz Visualizer Contributors"]
description = "A CLI tool to visualize Collatz sequences as interactive graphs"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Harrichael/Collatz-Viz"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
eframe = "0.31"
egui = "0.31"
num-bigint = "0.4"
num-traits = "0.2"
petgraph = "0.6"
ratatui = "0.29"
smithay-clipboard = "=0.7.2"
moxcms = "=0.7.10"
